Everything but the mailer and JS.

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -5,8 +5,8 @@
   <%= label_tag :timer %>
   <%= number_field_tag :timer %>
   <br />
-  <%= label_tag :email %>
-  <%= text_field_tag :email %>  
+  <%= label_tag :emails %>
+  <%= text_field_tag :emails %>  
   <br />
   <%= submit_tag "Start writing!" %>
 <% end %>
