change development database to postgres

--- a/app/views/messages/compose.html.erb
+++ b/app/views/messages/compose.html.erb
@@ -2,7 +2,7 @@
 
 Send to: <%= @message.emails %> 
 <br />
-<%= form_for @message, data: { autosave_url: autosave_message_path(@message) } do |f| %>
+<%= form_for @message, url: send_message_message_path(@message), data: { autosave_url: message_path(@message) } do |f| %>
   <%= f.text_area :body, class: 'ckeditor', size: "100x10" %>
   <br />
   <%= f.submit "Send!" %>
